# Dumper

./: CMakeLists.txt  HOW_TO_USE.md  README.md
.github/workflows/: build.yml
src/: main.cpp  vendor.hpp
src/core/: dumper.cpp
